# ot-tehtavat

./: .gitignore  README.md
DesktopJournal/: .pylintrc  README.md  pyproject.toml  tasks.py
DesktopJournal/documentation/: architecture.md  changelog.md  hours.md  instructions.md  requirements_specification.md  testing.md
DesktopJournal/src/: database.db  db_connection.py  empty_schema.sql  index.py  init_database.py  populate.sql  schema.sql
DesktopJournal/src/entities/: note.py
DesktopJournal/src/gui/: main_ui.py  main_view.py  main_window.py
DesktopJournal/src/gui/components/: mainwindow.py  mainwindow.ui
DesktopJournal/src/repositories/: notes_repository.py
DesktopJournal/src/services/: notes_service.py
DesktopJournal/src/tests/: notes_service_test.py  notes_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
