[tool.poetry]
name = "desktopjournal"
version = "0.1.0"
description = ""
authors = ["Riku Brandt <brandtriku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.13.3"
coverage = "^6.3.2"
invoke = "^1.7.0"
pytest = "^7.1.1"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
